Fix chat scrollbar

--- a/src/modules/ui/_scrollbar.scss
+++ b/src/modules/ui/_scrollbar.scss
@@ -9,7 +9,7 @@
 }
 
 // Chat
-.theme-dark .auto-2K3UW5{
+.theme-dark .auto-2TJ1RH{
     &::-webkit-scrollbar{
         width: 12px;
     }
